<resources>
    <string name="app_name">算一下</string>
    <string name="title">请填写组合数</string>
    <string name="text_hint">请输入，用逗号或空格分隔</string>
    <string name="btn_start_label">开始组合</string>
    <string name="btn_ok">确定</string>
    <string name="ck_label">保留当前输入供下次使用</string>
    <string name="result_data_tip">超过1000条的结果不显示</string>
    <string name="no_data_tip">无符合条件的数据</string>
    <string name="tomany_data_tip">超过1万条数据，请重新设置过滤条件</string>
    <string name="settings_menu_item">设置</string>
    <string name="settings_title">条件设置</string>
    <string name="settings_item_match_label">使用规则</string>
    <string name="settings_item_option_less">小于如下设置</string>
    <string name="settings_item_option_equals">等于如下设置</string>
    <string name="settings_item_less16_label">1~16个数</string>
    <string name="settings_item_enable_label">是否使用规则</string>
    <string name="settings_item_endwith_label">是否使用尾数缩水</string>
    <string name="settings_item_less_than_after">前排比后排小</string>
    <string name="settings_item_less16_key">less16</string>
    <string name="settings_unlimited">不限制</string>
    <string name="settings_title1">基本设置</string>
    <string name="settings_title2">尾数设置</string>
    <string name="settings_endwith_key_set0">set0</string>
    <string name="settings_endwith_key_set1">set1</string>
    <string name="settings_endwith_key_set2">set2</string>
    <string name="settings_endwith_key_set3">set3</string>
    <string name="settings_endwith_key_set4">set4</string>
    <string name="settings_endwith_key_set5">set5</string>
    <string name="settings_endwith_key_set6">set6</string>
    <string name="settings_endwith_key_set7">set7</string>
    <string name="settings_endwith_key_set8">set8</string>
    <string name="settings_endwith_key_set9">set9</string>
    <string name="main2_btn_select_all">全选</string>
    <string name="main2_btn_reset_all">清除</string>
    <string name="main2_btn_reverse_sel">反选</string>
    <string name="main2_btn_all_ji">全奇</string>
    <string name="main2_btn_all_ou">全偶</string>
    <string name="main2_btn_all_zhi">全质</string>
    <string name="main2_btn_all_he">全合</string>
    <string name="main2_btn_show">查看结果</string>
</resources>
