<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="com.zhouf.myapp.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:padding="6dp"
        android:gravity="center"
        android:text="@string/title"/>

    <EditText
        android:id="@+id/num1"
        android:hint="@string/text_hint"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/num2"
        android:hint="@string/text_hint"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/num3"
        android:hint="@string/text_hint"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/num4"
        android:hint="@string/text_hint"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/num5"
        android:hint="@string/text_hint"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/num6"
        android:hint="@string/text_hint"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <CheckBox
        android:id="@+id/chk_saved"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/ck_label" />

    <Button
        android:id="@+id/btn_start"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:text="@string/btn_start_label"
        android:onClick="onStartClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>
